[gd_scene load_steps=9 format=3 uid="uid://dwtp1ogpi4d2d"]

[ext_resource type="Script" path="res://Scripts/road.gd" id="1_o4f6n"]
[ext_resource type="Texture2D" uid="uid://dxhpebjxsky13" path="res://Sprites/Drum Session/Drum Road/Road.png" id="2_axi5i"]
[ext_resource type="PackedScene" uid="uid://c6a11no5re6pj" path="res://Scenes/DrumSession/left_arrow.tscn" id="3_b7ckh"]
[ext_resource type="PackedScene" uid="uid://y8r8yudkouv0" path="res://Scenes/DrumSession/right_arrow.tscn" id="4_hs3xu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m5vy4"]
size = Vector2(8, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f546l"]
size = Vector2(16.5, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_keppx"]
size = Vector2(24, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m5doe"]
size = Vector2(1, 64)

[node name="Road" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_o4f6n")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_axi5i")

[node name="LeftArrow" parent="." instance=ExtResource("3_b7ckh")]
position = Vector2(-112, -16)
rotation = 1.5708

[node name="RightArrow" parent="." instance=ExtResource("4_hs3xu")]
position = Vector2(-112, 16)
rotation = 1.5708

[node name="Perfect" type="Area2D" parent="."]
visible = false
position = Vector2(-112, 4.47035e-08)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Perfect"]
shape = SubResource("RectangleShape2D_m5vy4")
debug_color = Color(0, 0.65098, 0.0862745, 0.419608)

[node name="Good" type="Area2D" parent="."]
visible = false
position = Vector2(-112, 4.47035e-08)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Good"]
shape = SubResource("RectangleShape2D_f546l")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Ok" type="Area2D" parent="."]
visible = false
position = Vector2(-112, 4.47035e-08)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ok"]
shape = SubResource("RectangleShape2D_keppx")
debug_color = Color(0.972549, 0, 0.45098, 0.419608)

[node name="BarsSpawner" type="Node2D" parent="."]
position = Vector2(144, 0)

[node name="End" type="Area2D" parent="."]
position = Vector2(-183.5, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="End"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_m5doe")

[node name="EndBar" type="Area2D" parent="."]
position = Vector2(-143, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndBar"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_m5doe")

[connection signal="area_entered" from="Perfect" to="." method="_on_perfect_area_entered"]
[connection signal="area_exited" from="Perfect" to="." method="_on_perfect_area_exited"]
[connection signal="area_entered" from="Good" to="." method="_on_good_area_entered"]
[connection signal="area_exited" from="Good" to="." method="_on_good_area_exited"]
[connection signal="area_entered" from="Ok" to="." method="_on_ok_area_entered"]
[connection signal="area_exited" from="Ok" to="." method="_on_ok_area_exited"]
[connection signal="area_entered" from="End" to="." method="_on_end_area_entered"]
[connection signal="area_entered" from="EndBar" to="." method="_on_end_bar_area_entered"]
